@@ -2,7 +2,7 @@
 <addons>
 <addon id="plugin.audio.cbc-radio"
        name="CBC Radio"
-       version="0.0.2"
+       version="0.0.3"
        provider-name="Chisholm, Stephen">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
