@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.audio.cbc-radio"
        name="CBC Radio"
-       version="0.0.2"
+       version="0.0.3"
        provider-name="Chisholm, Stephen">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
